--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -207,6 +207,7 @@
         margin-top: 20px !important;
         .usluga{
             justify-content: center;
+			width:100%;
             .usluga1{
                 .pozicija{
                     margin: 10% !important;
