--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -89,9 +89,8 @@
         padding: 5px 0px !important;
         #logo{
             width: 100% !important;
-            align-items: center !important;
-			display:flex;
-			justify-content:center;
+			display:flex !important;
+			justify-content:center !important;
             img{
                 left: 50% !important;
             }
