--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -29,7 +29,7 @@
                 width: 100%;
                 margin-left: 50px;
                 p{
-                    margin-left: 50pxp;
+                    margin-left: 50px;
                 }
             }
         }
